// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeAiJsonReadiness > scores a complete repository at 100 1`] = `
[
  {
    "category": "manifest",
    "id": "manifest.exists",
    "label": "ai.json exists",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Create ai.json with \`ai-json init\`.",
    "status": "pass",
  },
  {
    "category": "manifest",
    "id": "manifest.valid",
    "label": "ai.json valid",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Fix ai.json validation errors.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.build",
    "label": "build",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a build command.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.test",
    "label": "test",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a test command.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.lint",
    "label": "lint",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a lint command.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.typecheck",
    "label": "typecheck",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a typecheck command.",
    "status": "pass",
  },
  {
    "category": "context",
    "id": "context.agents",
    "label": "AGENTS.md",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Reference an AGENTS.md file and ensure it exists.",
    "status": "pass",
  },
  {
    "category": "context",
    "id": "context.architecture",
    "label": "ARCHITECTURE.md",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add architecture documentation.",
    "status": "pass",
  },
  {
    "category": "context",
    "id": "context.docs",
    "label": "docs/",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add or reference a docs path.",
    "status": "pass",
  },
  {
    "category": "context",
    "id": "context.source",
    "label": "src/",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Reference the primary source path.",
    "status": "pass",
  },
  {
    "category": "context",
    "id": "context.tests",
    "label": "tests/",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Reference the primary tests path.",
    "status": "pass",
  },
  {
    "category": "permissions",
    "id": "permissions.filesystem",
    "label": "filesystem: workspace",
    "maxPoints": 8,
    "points": 8,
    "recommendation": "Explicitly define filesystem permissions.",
    "status": "pass",
  },
  {
    "category": "permissions",
    "id": "permissions.network",
    "label": "network: false",
    "maxPoints": 7,
    "points": 7,
    "recommendation": "Explicitly define network permissions.",
    "status": "pass",
  },
  {
    "category": "quality",
    "id": "quality.required.exists",
    "label": "4 required gates",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Define required quality gates.",
    "status": "pass",
  },
  {
    "category": "quality",
    "id": "quality.required.mapped",
    "label": "required gates map to commands",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Ensure every required quality gate maps to a command.",
    "status": "pass",
  },
]
`;

exports[`analyzeAiJsonReadiness > scores a missing manifest without throwing 1`] = `
[
  {
    "category": "manifest",
    "id": "manifest.exists",
    "label": "ai.json exists",
    "maxPoints": 10,
    "points": 0,
    "recommendation": "Create ai.json with \`ai-json init\`.",
    "status": "fail",
  },
  {
    "category": "manifest",
    "id": "manifest.valid",
    "label": "ai.json valid",
    "maxPoints": 10,
    "points": 0,
    "recommendation": "Create a valid ai.json manifest.",
    "status": "fail",
  },
  {
    "category": "commands",
    "id": "commands.build",
    "label": "build",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add a build command.",
    "status": "warn",
  },
  {
    "category": "commands",
    "id": "commands.test",
    "label": "test",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add a test command.",
    "status": "warn",
  },
  {
    "category": "commands",
    "id": "commands.lint",
    "label": "lint",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add a lint command.",
    "status": "warn",
  },
  {
    "category": "commands",
    "id": "commands.typecheck",
    "label": "typecheck",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add a typecheck command.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.agents",
    "label": "AGENTS.md",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Reference an AGENTS.md file and ensure it exists.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.architecture",
    "label": "architecture documentation",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add architecture documentation.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.docs",
    "label": "docs/",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add or reference a docs path.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.source",
    "label": "source",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Reference the primary source path.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.tests",
    "label": "tests",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Reference the primary tests path.",
    "status": "warn",
  },
  {
    "category": "permissions",
    "id": "permissions.filesystem",
    "label": "filesystem policy",
    "maxPoints": 8,
    "points": 0,
    "recommendation": "Explicitly define filesystem permissions.",
    "status": "warn",
  },
  {
    "category": "permissions",
    "id": "permissions.network",
    "label": "network policy",
    "maxPoints": 7,
    "points": 0,
    "recommendation": "Explicitly define network permissions.",
    "status": "warn",
  },
  {
    "category": "quality",
    "id": "quality.required.exists",
    "label": "required quality gates",
    "maxPoints": 10,
    "points": 0,
    "recommendation": "Define required quality gates.",
    "status": "warn",
  },
  {
    "category": "quality",
    "id": "quality.required.mapped",
    "label": "required gates map to commands",
    "maxPoints": 10,
    "points": 0,
    "recommendation": "Ensure every required quality gate maps to a command.",
    "status": "warn",
  },
]
`;

exports[`analyzeAiJsonReadiness > scores partial readiness deterministically 2`] = `
[
  {
    "category": "manifest",
    "id": "manifest.exists",
    "label": "ai.json exists",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Create ai.json with \`ai-json init\`.",
    "status": "pass",
  },
  {
    "category": "manifest",
    "id": "manifest.valid",
    "label": "ai.json valid",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Fix ai.json validation errors.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.build",
    "label": "build",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a build command.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.test",
    "label": "test",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a test command.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.lint",
    "label": "lint",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Add a lint command.",
    "status": "pass",
  },
  {
    "category": "commands",
    "id": "commands.typecheck",
    "label": "typecheck",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add a typecheck command.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.agents",
    "label": "AGENTS.md",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Reference an AGENTS.md file and ensure it exists.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.architecture",
    "label": "architecture documentation",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add architecture documentation.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.docs",
    "label": "docs/",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Add or reference a docs path.",
    "status": "warn",
  },
  {
    "category": "context",
    "id": "context.source",
    "label": "src/",
    "maxPoints": 5,
    "points": 5,
    "recommendation": "Reference the primary source path.",
    "status": "pass",
  },
  {
    "category": "context",
    "id": "context.tests",
    "label": "tests",
    "maxPoints": 5,
    "points": 0,
    "recommendation": "Reference the primary tests path.",
    "status": "warn",
  },
  {
    "category": "permissions",
    "id": "permissions.filesystem",
    "label": "filesystem: workspace",
    "maxPoints": 8,
    "points": 8,
    "recommendation": "Explicitly define filesystem permissions.",
    "status": "pass",
  },
  {
    "category": "permissions",
    "id": "permissions.network",
    "label": "network policy",
    "maxPoints": 7,
    "points": 0,
    "recommendation": "Explicitly define network permissions.",
    "status": "warn",
  },
  {
    "category": "quality",
    "id": "quality.required.exists",
    "label": "2 required gates",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Define required quality gates.",
    "status": "pass",
  },
  {
    "category": "quality",
    "id": "quality.required.mapped",
    "label": "required gates map to commands",
    "maxPoints": 10,
    "points": 10,
    "recommendation": "Ensure every required quality gate maps to a command.",
    "status": "pass",
  },
]
`;
